2005-05-12  Frederic Crozat  <fcrozat@mandriva.com>

	* modulesets/gnome-2.10.modules: Use gnome-2-10 for gnome-desktop.

2005-05-10  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* modulesets/gnome-2.12.modules: Add missing dependencies of
	gnome-python-extras: nautilus-cd-burner, libgtop, totem, and gdl.

2005-05-09  James Henstridge  <james@jamesh.id.au>

	* jhbuild/defaults.jhbuildrc (moduleset): point at gnome-2.12

	* vbs-head.jhbuildrc: remove obsolete sample config file.

	* sample.jhbuildrc (moduleset): point at gnome-2.12

	* jamesh.jhbuildrc (moduleset): point at gnome-2.12

	* jhbuild/moduleset.py (load): allow "moduleset" in config file to
	be a list of module sets, rather than just a single one.  Nothing
	is done to ensure that the modulesets don't conflict.  This allows
	you to use ['gnome-2.10', 'gtk28'] as a moduleset.

	* modulesets/bootstrap.modules (libtool): update to 1.5.16.
	(gettext): update to 0.14.4.

2005-05-08  Murray Cumming <murrayc@murrayc.com>

	* modulesets/gnome-2.12.modules: glom: Depend on 
	iso-codes.

2005-05-06  Matthias Clasen <mclasen@redhat.com>

	* modulesets/gnome-2.12.modules: Add libmusicbrainz
	tarball module, and make totem depend on it.

	* modulesets/gnome-2.12.modules: Add iso-codes as 
	tarball module, and make epiphany depend on it.

2005-05-05  Murray Cumming <murrayc@murrayc.com>

	* modulesets/gnome-2.12.modules: glom: Depend on 
	gnome-python-extras, though it only needs pygda from there.

2005-04-26  Murray Cumming <murrayc@murrayc.com>

	* modulesets/gnome-2.12.modules: Added Inkscape.

2005-04-26  James Henstridge  <james@jamesh.id.au>

	* modulesets/gnome-2.12.modules (gnome-screensaver): add module.
	Patch from bug #301706.

2005-04-22  James Henstridge  <james@jamesh.id.au>

	* modulesets/bootstrap.modules (pkg-config): pass
	--enable-indirect-deps, since the change makes assumptions about
	library use that are not valid.

2005-04-22  Mark McLoughlin  <mark@skynet.ie>
