@@ -182,7 +182,7 @@ class Tarball(base.Package):
     def do_build(self, buildscript):
         os.chdir(self.get_builddir(buildscript))
         buildscript.set_action('Building', self)
-        cmd = 'make %s' % self.makeargs
+        cmd = '%s %s' % (os.environ.get('MAKE', 'make'), self.makeargs)
         if buildscript.execute(cmd) == 0:
             return (self.STATE_INSTALL, None, None)
         else:
@@ -191,7 +191,7 @@ class Tarball(base.Package):
     def do_install(self, buildscript):
         os.chdir(self.get_builddir(buildscript))
         buildscript.set_action('Installing', self)
-        cmd = 'make %s install' % self.makeargs
+        cmd = '%s %s install' % (os.environ.get('MAKE', 'make'), self.makeargs)
         error = None
         if buildscript.execute(cmd) != 0:
             error = 'could not make module'
