@@ -1,3 +1,12 @@
+2005-05-14  Dan Winship  <danw@novell.com>
+
+	* jhbuild/modtypes/base.py (AutogenModule.do_clean,
+	AutogenModule.do_build, AutogenModule.do_check,
+	AutogenModule.do_install): 
+	* jhbuild/modtypes/gcjmodule.py (GCJModule.do_install):
+	* jhbuild/modtypes/tarball.py (Tarball.do_build,
+	Tarball.do_install): Use $MAKE if it's set. #160535
+
 2005-05-12  Frederic Crozat  <fcrozat@mandriva.com>
 
 	* modulesets/gnome-2.10.modules: Use gnome-2-10 for gnome-desktop.
